--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^14.0.20",
     "@types/react": "^16.9.41",
     "typescript": "^3.9.6"
