--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "axios": "^0.19.2",
+    "fontsource-roboto": "^2.1.4",
     "next": "9.4.4",
     "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
