--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "axios": "^0.19.2",
     "fontsource-roboto": "^2.1.4",
     "next": "9.4.4",
@@ -19,12 +21,14 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "^14.0.20",
     "@types/react": "^16.9.41",
+    "@types/yup": "^0.29.3",
     "typescript": "^3.9.6"
   }
 }
