--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
+    "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
